@@ -2,4 +2,5 @@
 #define FUNC_NAME grub_search_fs_uuid
 #define COMMAND_NAME "search.fs_uuid"
 #define SEARCH_TARGET "filesystem UUID"
+#define HELP_MESSAGE N_("Search devices by UUID. If VARIABLE is specified, the first device found is set to a variable.")
 #include "search.c"
