@@ -1,3 +1,13 @@
+2010-01-06  Carles Pina i Estany  <carles@pina.cat>
+
+	* commands/search.c (GRUB_MOD_INIT): Use HELP_MESSAGE.
+	* commands/search_file.c (HELP_MESSAGE): New macro.
+	* commands/search_label.c (HELP_MESSAGE): Likewise.
+	* commands/search_uuid.c (HELP_MESSAGE): Likewise.
+	* po/POTFILES: Add `commands/search_file.c',
+	`commands/search_label.c', `commands_uuid.c'. Remove duplicate
+	`commands/search.c'.
+
 2010-01-05  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* config.rpath: Update from Gnulib.
